Align mobile menu button, fix #202 #203 #204

--- a/app/components/PublicEvent/styles.css
+++ b/app/components/PublicEvent/styles.css
@@ -7,8 +7,8 @@
 }
 
 @media (max-width: 400px) {
-  .publicEvent:first-child {
-    margin-top: -85px;
+  .publicEvent:first-child .header {
+    padding-top: 0;
   }
 }
 
