--- a/app/components/PublicEventMenu/styles.css
+++ b/app/components/PublicEventMenu/styles.css
@@ -80,8 +80,8 @@
 
 .collapsed {
   content: url(static/img_new/icons/icon_menu.svg);
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
   border-radius: 100%;
   margin-top: 15px;
   margin-left: 15px;
